Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPVIuHRJhUFth6jIzsHlBmD",
+      "authorship_tag": "ABX9TyPVEl/L4j76mzk/3CM4YPhf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2561,7 +2561,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2584,7 +2584,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2628,7 +2628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2652,7 +2652,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2694,7 +2694,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2719,7 +2719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2762,7 +2762,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2786,7 +2786,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2827,7 +2827,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2853,7 +2853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,7 +2900,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2927,7 +2927,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,7 +2969,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2993,7 +2993,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3033,7 +3033,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3057,7 +3057,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3097,7 +3097,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3121,7 +3121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3136,7 +3136,50 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 問題\n",
+        "# B - Minesweeper\n",
+        "# H×W のマス目が与えられます。\n",
+        "# 入力において、全てのマスは文字で表されており、.は空きマス、 # は爆弾マスに対応します。\n",
+        "# マス目は H 個の文字列 S_1 ... S_H で表されます。\n",
+        "# イルカは各空きマスの上下左右および斜めの 8 方向で隣接しているマスに爆弾マスが何個あるか\n",
+        "# 気になっています。\n",
+        "# そこで、各空きマスに対応する . を、その空きマスの周囲8方向に隣接するマスにおける爆弾マスの\n",
+        "# 個数を表す数字で置き換えることにしました。\n",
+        "# 以上の規則で置き換えられた後のマス目を出力してください。\n",
+        "# 入力\n",
+        "# 3 5\n",
+        "# .....\n",
+        "# .#.#.\n",
+        "# .....\n",
+        "# =>\n",
+        "# Copy\n",
+        "# 11211\n",
+        "# 1#2#1\n",
+        "# 11211\n",
+        "# 入力\n",
+        "# 3 5\n",
+        "# #####\n",
+        "# #####\n",
+        "# #####\n",
+        "# =>\n",
+        "# #####\n",
+        "# #####\n",
+        "# #####\n",
+        "# 入力例\n",
+        "# 6 6\n",
+        "# #####.\n",
+        "# #.#.##\n",
+        "# ####.#\n",
+        "# .#..#.\n",
+        "# #.##..\n",
+        "# #.#...\n",
+        "# =>\n",
+        "# #####3\n",
+        "# #8#7##\n",
+        "# ####5#\n",
+        "# 4#65#2\n",
+        "# #5##21\n",
+        "# #4#310"
       ],
       "metadata": {
         "id": "kBY0fMDSOr2z"
@@ -3147,13 +3190,125 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "#include <vector>\n",
+        "using namespace std;\n",
+        "int main(){\n",
+        " int H, W;\n",
+        " int sum = 0; \n",
+        " cin >> H >> W;\n",
+        " \n",
+        " vector<vector<char>> data(H, vector<char>(W));\n",
+        " for(int i = 0; i < H; i++){\n",
+        "   for(int j = 0; j < W; j++){\n",
+        "     cin >> data.at(i).at(j);\n",
+        "   }\n",
+        " }\n",
+        " \n",
+        " for(int i = 0; i < H; i++){\n",
+        "   for(int j = 0; j < W; j++){\n",
+        "     if(data.at(i).at(j) == '.'){\n",
+        "       if(i-1>=0 && j-1>=0){\n",
+        "         if(data.at(i-1).at(j-1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(i-1>=0){\n",
+        "         if(data.at(i-1).at(j) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(i-1>=0 && j+1<=W-1){\n",
+        "         if(data.at(i-1).at(j+1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(j-1>=0){\n",
+        "         if(data.at(i).at(j-1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(j+1<=W-1){\n",
+        "         if(data.at(i).at(j+1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(i+1<=H-1 && j-1>=0){\n",
+        "         if(data.at(i+1).at(j-1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       \n",
+        "       if(i+1<=H-1){\n",
+        "         if(data.at(i+1).at(j) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       if(i+1<=H-1 && j+1<=W-1){\n",
+        "         if(data.at(i+1).at(j+1) == '#'){\n",
+        "           sum++;\n",
+        "         }\n",
+        "       }\n",
+        "       char a[5];\n",
+        "       sprintf(a, \"%d\", sum);\n",
+        "       data.at(i).at(j) = a[0];\n",
+        "       sum = 0; \n",
+        "     } else {\n",
+        "       continue;\n",
+        "       }\n",
+        "    }\n",
+        " }\n",
+        "  for(int i = 0; i < H; i++){\n",
+        "   for(int j = 0; j < W; j++){\n",
+        "     cout << data.at(i).at(j);\n",
+        "   }\n",
+        "     cout << endl;\n",
+        " }\n",
+        " return 0;\n",
+        "}\n"
       ],
       "metadata": {
-        "id": "FeyUJMAoOrtJ"
+        "id": "FeyUJMAoOrtJ",
+        "outputId": "8c0cbd5c-0121-421a-970e-ce3b39d92f35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo \"2 2 . # . .\" | ./temp"
+      ],
+      "metadata": {
+        "id": "Wti62c9nuu6x",
+        "outputId": "ecbb4b76-8728-42cd-f4fc-00809397b042",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1#\n",
+            "11\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3214,7 +3369,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3237,7 +3392,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3277,7 +3432,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3300,7 +3455,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3356,7 +3511,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3379,7 +3534,7 @@
         },
         "outputId": "cbbcea43-adac-4aec-a343-3782f771bde5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
