Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7bN6w/bLCm6x/kJByewtl",
+      "authorship_tag": "ABX9TyM2k+qFFwjwLK7LN3pR14cS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3152,7 +3152,6 @@
         "# .#.#.\n",
         "# .....\n",
         "# =>\n",
-        "# Copy\n",
         "# 11211\n",
         "# 1#2#1\n",
         "# 11211\n",
@@ -3190,163 +3189,57 @@
     {
       "cell_type": "code",
       "source": [
-        "# 一旦コピーを取ってセーブする\n",
-        "# 後で消す\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
-        "int main() {\n",
-        "  int H, W, sum = 0;\n",
-        "  cin >> H >> W;\n",
-        "  \n",
-        "  vector<vector<char>> data(H, vector<char>(W));\n",
-        "  for (int i = 0; i < H; i++) {\n",
-        "    for (int j = 0; j < W; j++) {\n",
-        "      cin >> data.at(i).at(j);\n",
-        "    }\n",
-        "  }\n",
-        "\n",
-        "  for (int i = 0; i < H; i++) {\n",
-        "    for (int j = 0; j < W; j++) {\n",
-        "      if (data.at(i).at(j) == '.') {\n",
-        "        if (i - 1 >= 0 && j - 1 >= 0) {\n",
-        "          if (data.at(i - 1).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (i - 1 >= 0) {\n",
-        "          if (data.at(i - 1).at(j) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (i - 1 >= 0 && j + 1 <= W - 1) {\n",
-        "          if (data.at(i - 1).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (j - 1 >= 0) {\n",
-        "          if (data.at(i).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (j + 1 <= W - 1) {\n",
-        "          if (data.at(i).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (i + 1 <= H - 1 && j - 1 >= 0) {\n",
-        "          if (data.at(i + 1).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "\n",
-        "        if (i + 1 <= H - 1) {\n",
-        "          if (data.at(i + 1).at(j) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        if (i + 1 <= H - 1 && j + 1 <= W - 1) {\n",
-        "          if (data.at(i + 1).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
-        "        }\n",
-        "        char a[5];\n",
-        "        sprintf(a, \"%d\", sum);\n",
-        "        data.at(i).at(j) = a[0];\n",
-        "        sum = 0;\n",
-        "      }\n",
-        "      else {\n",
-        "        continue;\n",
-        "      }\n",
-        "    }\n",
-        "  }\n",
-        "\n",
-        "  for (auto row : data) {\n",
-        "    for (auto item : row) {\n",
-        "      cout << item;\n",
-        "    }\n",
-        "    cout << endl;\n",
-        "  }\n",
-        "}\n"
-      ],
-      "metadata": {
-        "id": "ut-h84hlR393"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 問題\n",
         "# B - Minesweeper\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
-        "#include <vector>\n",
         "using namespace std;\n",
+        "\n",
         "int main() {\n",
         "  int H, W, sum = 0;\n",
         "  cin >> H >> W;\n",
-        "  \n",
+        "\n",
         "  vector<vector<char>> data(H, vector<char>(W));\n",
+        "\n",
+        "  // データの読み込み\n",
         "  for (int i = 0; i < H; i++) {\n",
         "    for (int j = 0; j < W; j++) {\n",
         "      cin >> data.at(i).at(j);\n",
         "    }\n",
         "  }\n",
         "\n",
+        "  // 処理本体\n",
         "  for (int i = 0; i < H; i++) {\n",
         "    for (int j = 0; j < W; j++) {\n",
-        "      if (data.at(i).at(j) == '.') {\n",
+        "      if (data.at(i).at(j) == '#') continue;\n",
+        "      else if (data.at(i).at(j) == '.') {\n",
         "        if (i - 1 >= 0 && j - 1 >= 0) {\n",
-        "          if (data.at(i - 1).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i - 1).at(j - 1) == '#') sum++;\n",
         "        }\n",
         "        if (i - 1 >= 0) {\n",
-        "          if (data.at(i - 1).at(j) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i - 1).at(j) == '#') sum++;\n",
         "        }\n",
         "        if (i - 1 >= 0 && j + 1 <= W - 1) {\n",
-        "          if (data.at(i - 1).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i - 1).at(j + 1) == '#') sum++;\n",
         "        }\n",
         "        if (j - 1 >= 0) {\n",
-        "          if (data.at(i).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i).at(j - 1) == '#') sum++;\n",
         "        }\n",
         "        if (j + 1 <= W - 1) {\n",
-        "          if (data.at(i).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i).at(j + 1) == '#') sum++;\n",
         "        }\n",
         "        if (i + 1 <= H - 1 && j - 1 >= 0) {\n",
-        "          if (data.at(i + 1).at(j - 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i + 1).at(j - 1) == '#') sum++;\n",
         "        }\n",
-        "\n",
         "        if (i + 1 <= H - 1) {\n",
-        "          if (data.at(i + 1).at(j) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i + 1).at(j) == '#') sum++;\n",
         "        }\n",
         "        if (i + 1 <= H - 1 && j + 1 <= W - 1) {\n",
-        "          if (data.at(i + 1).at(j + 1) == '#') {\n",
-        "            sum++;\n",
-        "          }\n",
+        "          if (data.at(i + 1).at(j + 1) == '#') sum++;\n",
         "        }\n",
-        "        char a[5];\n",
-        "        sprintf(a, \"%d\", sum);\n",
-        "        data.at(i).at(j) = a[0];\n",
+        "\n",
+        "        data.at(i).at(j) = '0' + sum;\n",
         "        sum = 0;\n",
-        "      }\n",
-        "      else {\n",
-        "        continue;\n",
         "      }\n",
         "    }\n",
         "  }\n",
@@ -3364,9 +3257,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e20d133-4e12-4e06-9efd-f65ddfad72d3"
+        "outputId": "9c4d73c6-1d0a-4330-a950-d6f1e1c46e7f"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -3380,44 +3273,157 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo \"2 2 . # . .\" | ./temp"
+        "!g++ temp.cpp -o temp; echo \"3 5 ..... .#.#. .....\" | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"3 5 ##### ##### #####\" | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"6 6 #####. #.#.## ####.# .#..#. #.##.. #.#...\" | ./temp"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wti62c9nuu6x",
-        "outputId": "9122da28-c5ec-4ca9-b0ae-a3357da01ff8"
+        "outputId": "3266866b-4116-4b0a-8879-2924bcc8fcac"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1#\n",
-            "11\n"
+            "11211\n",
+            "1#2#1\n",
+            "11211\n",
+            "\n",
+            "#####\n",
+            "#####\n",
+            "#####\n",
+            "\n",
+            "#####3\n",
+            "#8#7##\n",
+            "####5#\n",
+            "4#65#2\n",
+            "#5##21\n",
+            "#4#310\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# ここに練習問題を入れる\n"
+        "# 実験\n",
+        "# 問題の趣旨が行は文字列で取り込め、という風に読めるので書き換えてみる\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int H, W;\n",
+        "  int sum = 0;\n",
+        "  cin >> H >> W;\n",
+        "\n",
+        "  vector<string> data(H);\n",
+        "\n",
+        "  // データの読み込み\n",
+        "  for (int i = 0; i < H; i++) {\n",
+        "    cin >> data.at(i);\n",
+        "  }\n",
+        "\n",
+        "  for (int i = 0; i < H; i++) {\n",
+        "    for (int j = 0; j < W; j++) {\n",
+        "      if (data.at(i).at(j) == '.') {\n",
+        "        if (i - 1 >= 0 && j - 1 >= 0) {\n",
+        "          if (data.at(i - 1).at(j - 1) == '#') sum++;\n",
+        "        }\n",
+        "        if (i - 1 >= 0) {\n",
+        "          if (data.at(i - 1).at(j) == '#') sum++;\n",
+        "        }\n",
+        "        if (i - 1 >= 0 && j + 1 <= W - 1) {\n",
+        "          if (data.at(i - 1).at(j + 1) == '#') sum++;\n",
+        "        }\n",
+        "        if (j - 1 >= 0) {\n",
+        "          if (data.at(i).at(j - 1) == '#') sum++;\n",
+        "        }\n",
+        "        if (j + 1 <= W - 1) {\n",
+        "          if (data.at(i).at(j + 1) == '#') sum++;\n",
+        "        }\n",
+        "        if (i + 1 <= H - 1 && j - 1 >= 0) {\n",
+        "          if (data.at(i + 1).at(j - 1) == '#') sum++;\n",
+        "        }\n",
+        "        if (i + 1 <= H - 1) {\n",
+        "          if (data.at(i + 1).at(j) == '#') sum++;\n",
+        "        }\n",
+        "        if (i + 1 <= H - 1 && j + 1 <= W - 1) {\n",
+        "          if (data.at(i + 1).at(j + 1) == '#') sum++;\n",
+        "        }\n",
+        "\n",
+        "        data.at(i).at(j) = '0' + sum;\n",
+        "        sum = 0;\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "  for (int i = 0; i < H; i++) { cout << data.at(i) << endl; }\n",
+        "}"
       ],
       "metadata": {
-        "id": "u_Q1pXaFh8iI"
-      }
+        "id": "LV0tWIMMarro",
+        "outputId": "d279f3f7-e38f-4904-dbbf-85d28b9c60e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# いまここ"
+        "!g++ temp.cpp -o temp; echo \"3 5 ..... .#.#. .....\" | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"3 5 ##### ##### #####\" | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"6 6 #####. #.#.## ####.# .#..#. #.##.. #.#...\" | ./temp"
       ],
       "metadata": {
-        "id": "3D-O1AtrwzDk"
-      }
+        "id": "ymmtI5Q5bJoM",
+        "outputId": "058427b1-b8df-4e62-c60c-f9ea6c1f05c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11211\n",
+            "1#2#1\n",
+            "11211\n",
+            "\n",
+            "#####\n",
+            "#####\n",
+            "#####\n",
+            "\n",
+            "#####3\n",
+            "#8#7##\n",
+            "####5#\n",
+            "4#65#2\n",
+            "#5##21\n",
+            "#4#310\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3559,15 +3565,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "WcoVH7kZMPid"
-      }
     },
     {
       "cell_type": "code",
@@ -4322,15 +4319,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# bookmark\n"
-      ],
-      "metadata": {
-        "id": "QaWLMnRWhfEc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "---\n",
         "問題   \n",
         "\n",
@@ -4708,6 +4696,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "zbIQuLtwkCHz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Counting Roads\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mxbiLOdKj5q-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
