Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2k+qFFwjwLK7LN3pR14cS",
+      "authorship_tag": "ABX9TyPxWIsJwUxpPgJZ1+xz3ttP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3368,11 +3368,11 @@
         "}"
       ],
       "metadata": {
-        "id": "LV0tWIMMarro",
-        "outputId": "d279f3f7-e38f-4904-dbbf-85d28b9c60e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LV0tWIMMarro",
+        "outputId": "d279f3f7-e38f-4904-dbbf-85d28b9c60e7"
       },
       "execution_count": 59,
       "outputs": [
@@ -3395,11 +3395,11 @@
         "!g++ temp.cpp -o temp; echo \"6 6 #####. #.#.## ####.# .#..#. #.##.. #.#...\" | ./temp"
       ],
       "metadata": {
-        "id": "ymmtI5Q5bJoM",
-        "outputId": "058427b1-b8df-4e62-c60c-f9ea6c1f05c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ymmtI5Q5bJoM",
+        "outputId": "058427b1-b8df-4e62-c60c-f9ea6c1f05c3"
       },
       "execution_count": 60,
       "outputs": [
@@ -4711,7 +4711,114 @@
       "source": [
         "# 問題\n",
         "# B - Counting Roads\n",
-        "\n"
+        "N 個の都市があり、M 本の道路があります。\n",
+        "i(1≦i≦M) 番目の道路は、都市 a \n",
+        "i\n",
+        "​\n",
+        "  と 都市 b \n",
+        "i\n",
+        "​\n",
+        "  (1≦a \n",
+        "i\n",
+        "​\n",
+        " ,b \n",
+        "i\n",
+        "​\n",
+        " ≦N) を双方向に結んでいます。\n",
+        "同じ 2 つの都市を結ぶ道路は、1 本とは限りません。\n",
+        "各都市から他の都市に向けて、何本の道路が伸びているか求めてください。\n",
+        "\n",
+        "制約\n",
+        "2≦N,M≦50\n",
+        "1≦a \n",
+        "i\n",
+        "​\n",
+        " ,b \n",
+        "i\n",
+        "​\n",
+        " ≦N\n",
+        "a \n",
+        "i\n",
+        "​\n",
+        " \n",
+        "\n",
+        "=b \n",
+        "i\n",
+        "​\n",
+        " \n",
+        "入力は全て整数である。\n",
+        "入力\n",
+        "入力は以下の形式で標準入力から与えられる。\n",
+        "\n",
+        "N M\n",
+        "a \n",
+        "1\n",
+        "​\n",
+        "  b \n",
+        "1\n",
+        "​\n",
+        " \n",
+        ":  \n",
+        "a \n",
+        "M\n",
+        "​\n",
+        "  b \n",
+        "M\n",
+        "​\n",
+        " \n",
+        "出力\n",
+        "答えを N 行に出力せよ。\n",
+        "i(1≦i≦N) 行目には、都市 i から他の都市に向けて、何本の道路が伸びているかを出力せよ。\n",
+        "\n",
+        "入力例 1 \n",
+        "Copy\n",
+        "4 3\n",
+        "1 2\n",
+        "2 3\n",
+        "1 4\n",
+        "出力例 1 \n",
+        "Copy\n",
+        "2\n",
+        "2\n",
+        "1\n",
+        "1\n",
+        "都市 1 からは 1 番目と 3 番目の道路が伸びています。\n",
+        "都市 2 からは 1 番目と 2 番目の道路が伸びています。\n",
+        "都市 3 からは 2 番目の道路が伸びています。\n",
+        "都市 4 からは 3 番目の道路が伸びています。\n",
+        "入力例 2 \n",
+        "Copy\n",
+        "2 5\n",
+        "1 2\n",
+        "2 1\n",
+        "1 2\n",
+        "2 1\n",
+        "1 2\n",
+        "出力例 2 \n",
+        "Copy\n",
+        "5\n",
+        "5\n",
+        "入力例 3 \n",
+        "Copy\n",
+        "8 8\n",
+        "1 2\n",
+        "3 4\n",
+        "1 5\n",
+        "2 8\n",
+        "3 7\n",
+        "5 2\n",
+        "4 1\n",
+        "6 8\n",
+        "出力例 3 \n",
+        "Copy\n",
+        "3\n",
+        "3\n",
+        "2\n",
+        "2\n",
+        "2\n",
+        "1\n",
+        "1\n",
+        "2\n"
       ],
       "metadata": {
         "id": "mxbiLOdKj5q-"
