--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPxWIsJwUxpPgJZ1+xz3ttP",
+      "authorship_tag": "ABX9TyOaO5lQGoKWD9aocIyYjuhv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3259,7 +3259,7 @@
         },
         "outputId": "9c4d73c6-1d0a-4330-a950-d6f1e1c46e7f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3286,7 +3286,7 @@
         "id": "Wti62c9nuu6x",
         "outputId": "3266866b-4116-4b0a-8879-2924bcc8fcac"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3374,7 +3374,7 @@
         "id": "LV0tWIMMarro",
         "outputId": "d279f3f7-e38f-4904-dbbf-85d28b9c60e7"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3401,7 +3401,7 @@
         "id": "ymmtI5Q5bJoM",
         "outputId": "058427b1-b8df-4e62-c60c-f9ea6c1f05c3"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4698,6 +4698,500 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Counting Roads\n",
+        "# N 個の都市があり、M 本の道路があります。\n",
+        "# i(1≦i≦M) 番目の道路は、都市 a_i と都市 b_i を双方向に結んでいます。\n",
+        "# 同じ 2 つの都市を結ぶ道路は、1 本とは限りません。\n",
+        "# 各都市から他の都市に向けて、何本の道路が伸びているか求めてください。\n",
+        "# 制約\n",
+        "# 2≦N,M≦50\n",
+        "# 1≦ a_i,b_i ≦N\n",
+        "# a_i !=b_i\n",
+        "# 答えを N 行に出力せよ。\n",
+        "# i(1≦i≦N) 行目には、都市 i から他の都市に向けて、何本の道路が伸びているかを出力せよ。\n",
+        "# 入力例\n",
+        "# 4 3\n",
+        "# 1 2\n",
+        "# 2 3\n",
+        "# 1 4\n",
+        "# 出力例\n",
+        "# 2\n",
+        "# 2\n",
+        "# 1\n",
+        "# 1\n",
+        "# 入力例 2 \n",
+        "# 2 5\n",
+        "# 1 2\n",
+        "# 2 1\n",
+        "# 1 2\n",
+        "# 2 1\n",
+        "# 1 2\n",
+        "# 出力例 2 \n",
+        "# 5\n",
+        "# 5\n",
+        "# 入力例 3 \n",
+        "# 8 8\n",
+        "# 1 2\n",
+        "# 3 4\n",
+        "# 1 5\n",
+        "# 2 8\n",
+        "# 3 7\n",
+        "# 5 2\n",
+        "# 4 1\n",
+        "# 6 8\n",
+        "# 出力例 3 \n",
+        "# 3\n",
+        "# 3\n",
+        "# 2\n",
+        "# 2\n",
+        "# 2\n",
+        "# 1\n",
+        "# 1\n",
+        "# 2"
+      ],
+      "metadata": {
+        "id": "mxbiLOdKj5q-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Counting Roads\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N, M;\n",
+        "  int sum = 0;\n",
+        "  cin >> N >> M;\n",
+        "\n",
+        "  vector<int> data(N,0);\n",
+        "\n",
+        "  // データの読み込み\n",
+        "  for (int i = 0; i < M; i++) {\n",
+        "      int city1, city2;\n",
+        "      cin >> city1 >> city2;\n",
+        "      data.at(city1-1)++;\n",
+        "      data.at(city2-1)++;\n",
+        "  }\n",
+        "  for (int i = 0; i < N; i++) { cout << data.at(i) << endl; }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "3diXANqPqxl-",
+        "outputId": "cf9e96e4-7b3e-447a-9bba-22a872ffbf0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 4 3 1 2 2 3 1 4 | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo 2 5 1 2 2 1 1 2 2 1 1 2 | ./temp\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo 8 8 1 2 3 4 1 5 2 8 3 7 5 2 4 1 6 8 | ./temp"
+      ],
+      "metadata": {
+        "id": "w-ZNee_FqxbW",
+        "outputId": "8336cedc-a5c9-4b6f-b658-f56452359454",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "2\n",
+            "1\n",
+            "1\n",
+            "\n",
+            "5\n",
+            "5\n",
+            "\n",
+            "3\n",
+            "3\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "1\n",
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Trained?\n",
+        "# 筋力をつけたい高橋君は、AtCoder 社のトレーニング設備で、トレーニングをすることにしました。\n",
+        "# AtCoder 社のトレーニング設備には N 個のボタンがついており、ちょうど \n",
+        "# 1 個のボタンが光っています。 ボタンには、1 から N までの番号がついています。 \n",
+        "# ボタン i が光っているときにそのボタンを押すと、ボタン i の明かりが消え、その後ボタン a_i が光ります。\n",
+        "# i=a_i であることもあります。 光っていないボタンを押しても、何も起こりません。\n",
+        "# 最初、ボタン 1 が光っています。高橋君は、ボタン 2 が光っている状態で、トレーニングをやめたいと思っています。\n",
+        "# そのようなことは可能かどうか判定し、もし可能なら最低で何回ボタンを押す必要があるかを求めてください。\n",
+        "# ボタン 2 を光らせることが不可能な場合、−1 を出力せよ。 そうでない場合、\n",
+        "# ボタン 2 を光らせるために必要なボタンを押す回数の最小値を出力せよ。\n",
+        "# 入力例\n",
+        "# 3\n",
+        "# 3\n",
+        "# 1\n",
+        "# 2\n",
+        "# 出力例\n",
+        "# 2\n",
+        "# 入力例\n",
+        "# 4\n",
+        "# 3\n",
+        "# 4\n",
+        "# 1\n",
+        "# 2\n",
+        "# 出力例\n",
+        "# -1\n",
+        "# 入力例\n",
+        "# 5\n",
+        "# 3\n",
+        "# 3\n",
+        "# 4\n",
+        "# 2\n",
+        "# 4\n",
+        "# 出力例\n",
+        "# 3\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N;\n",
+        "  int counter = 0;\n",
+        "  cin >> N;\n",
+        "\n",
+        "  vector<int> data(N, 0);\n",
+        "\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    cin >> data.at(i);\n",
+        "  }\n",
+        "\n",
+        "  int i = 0;\n",
+        "  while (true) {\n",
+        "    if (data.at(i) == 2) {\n",
+        "      cout << counter+1 << endl;\n",
+        "      break;\n",
+        "    }\n",
+        "    else if (counter >= N) {\n",
+        "      cout << -1 << endl;\n",
+        "      break;\n",
+        "    }\n",
+        "    else {\n",
+        "      i = data.at(i) - 1;\n",
+        "      counter++;\n",
+        "    }\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "AuBdQD4twwty",
+        "outputId": "4bb1f9bf-c2c7-4a30-99ce-a403106b7f5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 3 3 1 2 | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 4 3 4 1 2 | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 5 3 3 4 2 4 | ./temp"
+      ],
+      "metadata": {
+        "id": "gCY2AwI_wxNZ",
+        "outputId": "744d29e6-d269-4973-eae0-1177fba33c7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "-1\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Two Colors Card Game\n",
+        "# 高橋君は青いカードを N 枚，赤いカードを M 枚持っています。 \n",
+        "# カードにはそれぞれ文字列が書かれており， i 枚目の青いカードに書かれている文字列は \n",
+        "# s_i i ， i 枚目の赤いカードに書かれている文字列は t_i\n",
+        "# 高橋君は，文字列を 1 つ言います。 そして，全てのカードを確認し， \n",
+        "# その文字列が書かれた青いカードを 1 枚見つけるごとに 1 円貰えます。 \n",
+        "# また，その文字列が書かれた赤いカードを 1 枚見つけるごとに 1 円失います。\n",
+        "# 高橋君は，最大で差し引き何円貰うことができるでしょうか？\n",
+        "# ただし，違うカードに同じ文字列が書かれていることもあることに注意してください。\n",
+        "# 出力 高橋君が最大で差し引き X 円貰える時，X を出力せよ。\n",
+        "# 入力例 1\n",
+        "# 3\n",
+        "# apple\n",
+        "# orange\n",
+        "# apple\n",
+        "# 1\n",
+        "# grape\n",
+        "# 出力例 1 \n",
+        "# 2\n",
+        "# 入力例 2 \n",
+        "# 3\n",
+        "# apple\n",
+        "# orange\n",
+        "# apple\n",
+        "# 5\n",
+        "# apple\n",
+        "# apple\n",
+        "# apple\n",
+        "# apple\n",
+        "# apple\n",
+        "# 出力例 2 \n",
+        "# 1\n",
+        "# 入力例 3 \n",
+        "# 1\n",
+        "# voldemort\n",
+        "# 10\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# voldemort\n",
+        "# 出力例 3 \n",
+        "# 0\n",
+        "# 入力例 4 \n",
+        "# 6\n",
+        "# red\n",
+        "# red\n",
+        "# blue\n",
+        "# yellow\n",
+        "# yellow\n",
+        "# red\n",
+        "# 5\n",
+        "# red\n",
+        "# red\n",
+        "# yellow\n",
+        "# green\n",
+        "# blue\n",
+        "# 出力例 4 \n",
+        "# 1\n"
+      ],
+      "metadata": {
+        "id": "igDQdewzK7i0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Two Colors Card Game\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int M, N;\n",
+        "  int sum = 0;\n",
+        "  int max = 0;\n",
+        "\n",
+        "  cin >> M;\n",
+        "  vector<string> s(M);\n",
+        "  for (int i = 0; i < M; i++) {\n",
+        "    cin >> s.at(i);\n",
+        "  }\n",
+        "  cin >> N;\n",
+        "  vector<string> t(N);\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    cin >> t.at(i);\n",
+        "  }\n",
+        "\n",
+        "  for (int i = 0; i < M; i++) {\n",
+        "    sum = 1;\n",
+        "    for (int j = i + 1; j < M; j++) {\n",
+        "      if (s.at(i) == s.at(j)) sum++;\n",
+        "    }\n",
+        "    for (int k = 0; k < N; k++) {\n",
+        "      if (s.at(i) == t.at(k)) sum--;\n",
+        "    }\n",
+        "    if (sum > max) max = sum;\n",
+        "  }\n",
+        "  cout << max << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Sf4UQPrVK7Yc",
+        "outputId": "ac0330b1-4806-4200-d191-2b835b36a657",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 3 apple orange apple 1 grape | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 3 apple orange apple 5 apple apple apple apple apple | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 1 voldemort 10 voldemort voldemort voldemort voldemort voldemort voldemort voldemort voldemort voldemort voldemort | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 6 red red blue yellow yellow red 5 red red yellow green blue | ./temp"
+      ],
+      "metadata": {
+        "id": "t5r3G-DDT1xg",
+        "outputId": "c1bebb77-9cd4-42fb-aeff-b727472840e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "1\n",
+            "0\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Kagami Mochi\n",
+        "# X 段重ねの鏡餅 (X≥1) とは、X 枚の円形の餅を縦に積み重ねたものであって、\n",
+        "# どの餅もその真下の餅より直径が小さい（一番下の餅を除く）もののことです。\n",
+        "# 例えば、直径 10、8、6 センチメートルの餅をこの順に下から積み重ねると \n",
+        "# 3 段重ねの鏡餅になり、餅を一枚だけ置くと 1 段重ねの鏡餅になります。\n",
+        "# ダックスフンドのルンルンは N 枚の円形の餅を持っていて、\n",
+        "# そのうち i 枚目の餅の直径は d_i センチメートルです。\n",
+        "# これらの餅のうち一部または全部を使って鏡餅を作るとき、\n",
+        "# 最大で何段重ねの鏡餅を作ることができるでしょうか。\n",
+        "# 作ることのできる鏡餅の最大の段数を出力せよ。\n",
+        "# 入力例 1 \n",
+        "# 4\n",
+        "# 10\n",
+        "# 8\n",
+        "# 8\n",
+        "# 6\n",
+        "# 出力例 1 \n",
+        "# 3\n",
+        "# 入力例 2 \n",
+        "# 3\n",
+        "# 15\n",
+        "# 15\n",
+        "# 15\n",
+        "# 出力例 2 \n",
+        "# 1\n",
+        "# 入力例 3 \n",
+        "# 7\n",
+        "# 50\n",
+        "# 30\n",
+        "# 50\n",
+        "# 100\n",
+        "# 50\n",
+        "# 80\n",
+        "# 30\n",
+        "# 出力例 3 \n",
+        "# 4\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N, X;\n",
+        "  vector<int> mochi(N);\n",
+        "  X = 1;\n",
+        "  for (int i = 0; i < N; i++) cin >> mochi(i);\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "      for (int j = 0; j < N ; j++){\n",
+        "          if (mochi.at)\n",
+        "      }\n",
+        "  }\n"
+      ],
+      "metadata": {
+        "id": "AUO_1RaFZLnR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp\n"
+      ],
+      "metadata": {
+        "id": "8DfRdTQoZLTY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -4709,137 +5203,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題\n",
-        "# B - Counting Roads\n",
-        "N 個の都市があり、M 本の道路があります。\n",
-        "i(1≦i≦M) 番目の道路は、都市 a \n",
-        "i\n",
-        "​\n",
-        "  と 都市 b \n",
-        "i\n",
-        "​\n",
-        "  (1≦a \n",
-        "i\n",
-        "​\n",
-        " ,b \n",
-        "i\n",
-        "​\n",
-        " ≦N) を双方向に結んでいます。\n",
-        "同じ 2 つの都市を結ぶ道路は、1 本とは限りません。\n",
-        "各都市から他の都市に向けて、何本の道路が伸びているか求めてください。\n",
-        "\n",
-        "制約\n",
-        "2≦N,M≦50\n",
-        "1≦a \n",
-        "i\n",
-        "​\n",
-        " ,b \n",
-        "i\n",
-        "​\n",
-        " ≦N\n",
-        "a \n",
-        "i\n",
-        "​\n",
-        " \n",
-        "\n",
-        "=b \n",
-        "i\n",
-        "​\n",
-        " \n",
-        "入力は全て整数である。\n",
-        "入力\n",
-        "入力は以下の形式で標準入力から与えられる。\n",
-        "\n",
-        "N M\n",
-        "a \n",
-        "1\n",
-        "​\n",
-        "  b \n",
-        "1\n",
-        "​\n",
-        " \n",
-        ":  \n",
-        "a \n",
-        "M\n",
-        "​\n",
-        "  b \n",
-        "M\n",
-        "​\n",
-        " \n",
-        "出力\n",
-        "答えを N 行に出力せよ。\n",
-        "i(1≦i≦N) 行目には、都市 i から他の都市に向けて、何本の道路が伸びているかを出力せよ。\n",
-        "\n",
-        "入力例 1 \n",
-        "Copy\n",
-        "4 3\n",
-        "1 2\n",
-        "2 3\n",
-        "1 4\n",
-        "出力例 1 \n",
-        "Copy\n",
-        "2\n",
-        "2\n",
-        "1\n",
-        "1\n",
-        "都市 1 からは 1 番目と 3 番目の道路が伸びています。\n",
-        "都市 2 からは 1 番目と 2 番目の道路が伸びています。\n",
-        "都市 3 からは 2 番目の道路が伸びています。\n",
-        "都市 4 からは 3 番目の道路が伸びています。\n",
-        "入力例 2 \n",
-        "Copy\n",
-        "2 5\n",
-        "1 2\n",
-        "2 1\n",
-        "1 2\n",
-        "2 1\n",
-        "1 2\n",
-        "出力例 2 \n",
-        "Copy\n",
-        "5\n",
-        "5\n",
-        "入力例 3 \n",
-        "Copy\n",
-        "8 8\n",
-        "1 2\n",
-        "3 4\n",
-        "1 5\n",
-        "2 8\n",
-        "3 7\n",
-        "5 2\n",
-        "4 1\n",
-        "6 8\n",
-        "出力例 3 \n",
-        "Copy\n",
-        "3\n",
-        "3\n",
-        "2\n",
-        "2\n",
-        "2\n",
-        "1\n",
-        "1\n",
-        "2\n"
-      ],
-      "metadata": {
-        "id": "mxbiLOdKj5q-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 未解決というか後回しにして先に進もう"
-      ],
-      "metadata": {
-        "id": "miSbqN_Koc9c"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "B - Counting Roads\n",
         "B - Trained?\n",
         "難しめ\n",
         "B - Two Colors Card Game\n",
