--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOaO5lQGoKWD9aocIyYjuhv",
+      "authorship_tag": "ABX9TyPw0s5a6tWWtra9zcXNoO0r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4791,7 +4791,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4818,7 +4818,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4921,7 +4921,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4946,7 +4946,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5079,7 +5079,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5105,7 +5105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5164,57 +5164,74 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  int N, X;\n",
+        "  int N;\n",
+        "  cin >> N;\n",
         "  vector<int> mochi(N);\n",
-        "  X = 1;\n",
-        "  for (int i = 0; i < N; i++) cin >> mochi(i);\n",
+        "  vector<int> mochiset = {};\n",
+        "  bool intheset = false;\n",
         "  for (int i = 0; i < N; i++) {\n",
-        "      for (int j = 0; j < N ; j++){\n",
-        "          if (mochi.at)\n",
-        "      }\n",
-        "  }\n"
+        "    cin >> mochi.at(i);\n",
+        "  }\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    if (i == 0) {\n",
+        "      mochiset.push_back(mochi.at(i));\n",
+        "      continue;\n",
+        "    }\n",
+        "    for (int j = 0; j < i; j++) {\n",
+        "      if (mochi.at(i) == mochi.at(j)) intheset = true;\n",
+        "    }\n",
+        "    if (intheset == false) {\n",
+        "      mochiset.push_back(mochi.at(i));\n",
+        "    }\n",
+        "    else { intheset = false; }\n",
+        "  }\n",
+        "  cout << mochiset.size() << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "AUO_1RaFZLnR"
+        "id": "AUO_1RaFZLnR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10e6ada4-b8a9-49f8-c03a-a6066e2b0f01"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp\n"
+        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 3 15 15 15 | ./temp\n",
+        "!g++ temp.cpp -o temp; echo 7 50 30 50 100 50 80 30 | ./temp"
       ],
       "metadata": {
-        "id": "8DfRdTQoZLTY"
+        "id": "8DfRdTQoZLTY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a84e52f2-67fb-4938-e9d8-934799865b94"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "zbIQuLtwkCHz"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "B - Trained?\n",
-        "難しめ\n",
-        "B - Two Colors Card Game\n",
-        "B - Card Game for Two\n",
-        "B - Kagami Mochi\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "g1z-0yPh-aWk"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "1\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5223,6 +5240,15 @@
       ],
       "metadata": {
         "id": "JYNzgIiEorrS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "zbIQuLtwkCHz"
       }
     },
     {
