--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwEFIskUrHR0BosD4gMVB3",
+      "authorship_tag": "ABX9TyP7Wuhkev2H+YyKVR7wM+wB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4858,30 +4858,6 @@
         "# そのようなことは可能かどうか判定し、もし可能なら最低で何回ボタンを押す必要があるかを求めてください。\n",
         "# ボタン 2 を光らせることが不可能な場合、−1 を出力せよ。 そうでない場合、\n",
         "# ボタン 2 を光らせるために必要なボタンを押す回数の最小値を出力せよ。\n",
-        "# 入力例\n",
-        "# 3\n",
-        "# 3\n",
-        "# 1\n",
-        "# 2\n",
-        "# 出力例\n",
-        "# 2\n",
-        "# 入力例\n",
-        "# 4\n",
-        "# 3\n",
-        "# 4\n",
-        "# 1\n",
-        "# 2\n",
-        "# 出力例\n",
-        "# -1\n",
-        "# 入力例\n",
-        "# 5\n",
-        "# 3\n",
-        "# 3\n",
-        "# 4\n",
-        "# 2\n",
-        "# 4\n",
-        "# 出力例\n",
-        "# 3\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -4973,72 +4949,6 @@
         "# 高橋君は，最大で差し引き何円貰うことができるでしょうか？\n",
         "# ただし，違うカードに同じ文字列が書かれていることもあることに注意してください。\n",
         "# 出力 高橋君が最大で差し引き X 円貰える時，X を出力せよ。\n",
-        "# 入力例 1\n",
-        "# 3\n",
-        "# apple\n",
-        "# orange\n",
-        "# apple\n",
-        "# 1\n",
-        "# grape\n",
-        "# 出力例 1 \n",
-        "# 2\n",
-        "# 入力例 2 \n",
-        "# 3\n",
-        "# apple\n",
-        "# orange\n",
-        "# apple\n",
-        "# 5\n",
-        "# apple\n",
-        "# apple\n",
-        "# apple\n",
-        "# apple\n",
-        "# apple\n",
-        "# 出力例 2 \n",
-        "# 1\n",
-        "# 入力例 3 \n",
-        "# 1\n",
-        "# voldemort\n",
-        "# 10\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# voldemort\n",
-        "# 出力例 3 \n",
-        "# 0\n",
-        "# 入力例 4 \n",
-        "# 6\n",
-        "# red\n",
-        "# red\n",
-        "# blue\n",
-        "# yellow\n",
-        "# yellow\n",
-        "# red\n",
-        "# 5\n",
-        "# red\n",
-        "# red\n",
-        "# yellow\n",
-        "# green\n",
-        "# blue\n",
-        "# 出力例 4 \n",
-        "# 1\n"
-      ],
-      "metadata": {
-        "id": "igDQdewzK7i0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題\n",
-        "# B - Two Colors Card Game\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -5133,32 +5043,6 @@
         "# これらの餅のうち一部または全部を使って鏡餅を作るとき、\n",
         "# 最大で何段重ねの鏡餅を作ることができるでしょうか。\n",
         "# 作ることのできる鏡餅の最大の段数を出力せよ。\n",
-        "# 入力例 1 \n",
-        "# 4\n",
-        "# 10\n",
-        "# 8\n",
-        "# 8\n",
-        "# 6\n",
-        "# 出力例 1 \n",
-        "# 3\n",
-        "# 入力例 2 \n",
-        "# 3\n",
-        "# 15\n",
-        "# 15\n",
-        "# 15\n",
-        "# 出力例 2 \n",
-        "# 1\n",
-        "# 入力例 3 \n",
-        "# 7\n",
-        "# 50\n",
-        "# 30\n",
-        "# 50\n",
-        "# 100\n",
-        "# 50\n",
-        "# 80\n",
-        "# 30\n",
-        "# 出力例 3 \n",
-        "# 4\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -5193,9 +5077,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10e6ada4-b8a9-49f8-c03a-a6066e2b0f01"
+        "outputId": "06240d9b-bee8-4a20-efee-8c1c831a5023"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -5209,18 +5093,18 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp\n",
-        "!g++ temp.cpp -o temp; echo 3 15 15 15 | ./temp\n",
-        "!g++ temp.cpp -o temp; echo 7 50 30 50 100 50 80 30 | ./temp"
+        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp #=> 3\n",
+        "!g++ temp.cpp -o temp; echo 3 15 15 15 | ./temp #=> 1\n",
+        "!g++ temp.cpp -o temp; echo 7 50 30 50 100 50 80 30 | ./temp #=> 4"
       ],
       "metadata": {
         "id": "8DfRdTQoZLTY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a84e52f2-67fb-4938-e9d8-934799865b94"
+        "outputId": "1991a9f5-92cd-46b4-a986-f00f55f59af5"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -5240,15 +5124,6 @@
       ],
       "metadata": {
         "id": "JYNzgIiEorrS"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "zbIQuLtwkCHz"
       }
     },
     {
@@ -5496,13 +5371,248 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# いまここ"
+        "# 問題\n",
+        "# EX14 - 三人兄弟の身長差\n",
+        "# 三人兄弟のA君とB君とC君が背くらべをしています。\n",
+        "# 三人の身長が与えられるので、最も大きい人と最も小さい人の身長差を出力してください。\n",
+        "# 例えば、A君の身長が160、B君の身長が154、C君の身長が152であるとします。\n",
+        "# このとき最も大きいのはA君で、最も小さいのはC君なので、出力は8になります。\n",
+        "# この問題はSTLの関数を使わなくても解けますが、STLの関数を使うと簡潔にプログラムを記述できます。\n",
+        "# 最もが大きい人と最も小さい人の身長差を出力してください。\n",
+        "# 160 154 152 #=> 8\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  vector<int> v(3);\n",
+        "  for(int i=0; i < v.size(); i++) cin >> v.at(i);\n",
+        "  sort(v.begin(), v.end());\n",
+        "  cout << v.at(v.size()-1) - v.at(0) << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "byN5-5HaUkXl"
-      }
+        "id": "T0BN-PbZ8sBi",
+        "outputId": "e0ef40ba-1f87-48aa-f268-0ba5d9f633c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 160 154 152 | ./temp #=> 8\n",
+        "!g++ temp.cpp -o temp; echo 200 200 200 |./temp #=> 0\n",
+        "!g++ temp.cpp -o temp; echo 145 1 170 |./temp #=> 169\n",
+        "!g++ temp.cpp -o temp; echo 150 190 160 |./temp #=> 40"
+      ],
+      "metadata": {
+        "id": "9AFdye8L8r3j",
+        "outputId": "07714b03-173b-4c43-da2a-fd702904f156",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "0\n",
+            "169\n",
+            "40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "KUpcrK_TOwaw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "k6aTR4GAOwSI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Card Game for Two\n",
+        "# N 枚のカードがあります. i 枚目のカードには, a_i という数が書かれています.\n",
+        "# Alice と Bob は, これらのカードを使ってゲームを行います. ゲームでは, \n",
+        "# Alice と Bob が交互に 1 枚ずつカードを取っていきます. Alice が先にカードを取ります.\n",
+        "# 2 人がすべてのカードを取ったときゲームは終了し, 取ったカードの数の合計がその人の得点になります. \n",
+        "# 2 人とも自分の得点を最大化するように最適な戦略を取った時, Alice は Bob より何点多く取るか求めてください.\n",
+        "# 両者が最適な戦略を取った時, Alice は Bob より何点多く取るかを出力してください.\n",
+        "# 2 3 1 #=> 2\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "    int N, Alice, Bob;\n",
+        "    cin >> N;\n",
+        "    Alice = Bob = 0;\n",
+        "    vector<int> v(N);\n",
+        "    for(int i=0; i < v.size(); i++) cin >> v.at(i);\n",
+        "    sort(v.begin(), v.end());\n",
+        "    reverse(v.begin(), v.end());\n",
+        "    for(int i=0;i<v.size();i++){\n",
+        "        if (i%2==0) Alice += v.at(i);\n",
+        "        else Bob += v.at(i);\n",
+        "    }\n",
+        "    cout << Alice - Bob << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "nJQfwse8MPYp",
+        "outputId": "cfe3e9ff-70fb-4248-b79d-a3ee2b223d65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 2 3 1 | ./temp #=> 2\n",
+        "!g++ temp.cpp -o temp; echo 3 2 7 4 | ./temp #=> 5\n",
+        "!g++ temp.cpp -o temp; echo 4 20 18 2 18 | ./temp #=> 18"
+      ],
+      "metadata": {
+        "id": "XFEmEa_jMPLB",
+        "outputId": "a8cfec3c-3909-4704-d0a1-87ad3618eb06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "5\n",
+            "18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# B - Kagami Mochi (revisited)\n",
+        "# X 段重ねの鏡餅 (X≥1) とは、X 枚の円形の餅を縦に積み重ねたものであって、\n",
+        "# どの餅もその真下の餅より直径が小さい（一番下の餅を除く）もののことです。\n",
+        "# 例えば、直径 10、8、6 センチメートルの餅をこの順に下から積み重ねると \n",
+        "# 3 段重ねの鏡餅になり、餅を一枚だけ置くと 1 段重ねの鏡餅になります。\n",
+        "# ダックスフンドのルンルンは N 枚の円形の餅を持っていて、\n",
+        "# そのうち i 枚目の餅の直径は d_i センチメートルです。\n",
+        "# これらの餅のうち一部または全部を使って鏡餅を作るとき、\n",
+        "# 最大で何段重ねの鏡餅を作ることができるでしょうか。\n",
+        "# 作ることのできる鏡餅の最大の段数を出力せよ。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N, X;\n",
+        "  cin >> N;\n",
+        "  X = 1;\n",
+        "  vector<int> vec(N);\n",
+        "  for (int i = 0; i < N; i++) cin >> vec.at(i);\n",
+        "  sort(vec.begin(),vec.end());\n",
+        "  for(int i=0; i < vec.size()-1; i++){\n",
+        "      if (vec.at(i) != vec.at(i+1)) X++;\n",
+        "  }\n",
+        "  cout << X << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "UtvWaTsfRfzD",
+        "outputId": "5212ba1e-3b98-4eba-8acb-f38217d4ab27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 4 10 8 8 6 | ./temp #=> 3\n",
+        "!g++ temp.cpp -o temp; echo 3 15 15 15 | ./temp #=> 1\n",
+        "!g++ temp.cpp -o temp; echo 7 50 30 50 100 50 80 30 | ./temp #=> 4"
+      ],
+      "metadata": {
+        "id": "qtD-QTfnRfnj",
+        "outputId": "4533a46b-4d32-4103-f25e-66feee53b025",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "1\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5514,15 +5624,7 @@
         "三人兄弟のA君とB君とC君は、お父さんに1つのプレゼントを貰うことになりました。\n",
         "貰えるプレゼントの予算は「テストの合計点の積」で決まります。\n",
         "\n",
-        "プレゼントの予算 = $(A_1+\\dots+A_n)\\times(B_1)$\n",
-        "\n",
-        "入力例  \n",
-        "2  \n",
-        "5 7  \n",
-        "4 10  \n",
-        "9 2  \n",
-        "=>  \n",
-        "1848"
+        "プレゼントの予算 = $(A_1+\\dots+A_n)\\times(B_1)$"
       ],
       "metadata": {
         "id": "4-0O_9lzicIl"
@@ -5588,7 +5690,7 @@
         "id": "g9A2t3y9iLwF",
         "outputId": "0a5893a2-4cb9-41b9-adaf-ae9e9c587d36"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5602,10 +5704,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo 2 5 7 4 10 9 2 |./temp\n",
-        "!g++ temp.cpp -o temp; echo 3 100 100 100 100 100 100 100 100 100 |./temp\n",
-        "!g++ temp.cpp -o temp; echo 5 95 20 74 81 10 100 50 32 84 31 0 0 0 0 0 |./temp\n",
-        "!g++ temp.cpp -o temp; echo 2 10 0 0 5 1 1 |./temp"
+        "!g++ temp.cpp -o temp; echo 2 5 7 4 10 9 2 |./temp  #=> 1848\n",
+        "!g++ temp.cpp -o temp; echo 3 100 100 100 100 100 100 100 100 100 |./temp #=> 27000000\n",
+        "!g++ temp.cpp -o temp; echo 5 95 20 74 81 10 100 50 32 84 31 0 0 0 0 0 |./temp #=> 0\n",
+        "!g++ temp.cpp -o temp; echo 2 10 0 0 5 1 1 |./temp #=> 100"
       ],
       "metadata": {
         "colab": {
@@ -5614,7 +5716,7 @@
         "id": "c60XFlHxkgN2",
         "outputId": "b52f52e9-a908-419c-d5aa-120e591163f8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5627,6 +5729,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "byN5-5HaUkXl"
+      }
     },
     {
       "cell_type": "code",
@@ -5900,6 +6011,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "0rpfac5UaMIs"
+      }
     },
     {
       "cell_type": "markdown",
