Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpcgmNLAjX6xIATAmDmzHY",
+      "authorship_tag": "ABX9TyM+ghTjIan7sWYpTC3swTIi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6668,12 +6668,13 @@
         "# ...\n",
         "# 試合Mで勝った人の番号A_M 試合Mで負けた人の番号B_M\n",
         "# 同じ参加者のペアについて2回以上試合が行われることはありません。\n",
-        "# ​試合結果を表示する。\n",
+        "# ​試合結果を表示の仕方。\n",
         "# i番の参加者とj番の参加者が試合をして、\n",
         "# i番の参加者が勝ったなら R_i,j = o\n",
         "# i番の負けたなら R_i,j = x\n",
         "# i番の人とj番の人が試合を行っていない場合 R_i,j = -\n",
-        "​3 2 1 2 3 1 3 #=>  - o x x - - o - -\n",
+        "# M試合が終了した時点での試合結果の表を出力してください。\n",
+        "# ただし、各行の行末に空白を含まないことに注意してください。\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -6689,178 +6690,7 @@
         "  // ここにプログラムを追記\n",
         "  // (ここで\"試合結果の表\"の2次元配列を宣言)\n",
         "}\n",
-        "  int N, M;\n",
-        "  cin >> N >> M;\n",
-        "  vector<int> A(M), B(M);\n",
-        "  for (int i = 0; i < M; i++) {\n",
-        "    cin >> A.at(i) >> B.at(i);\n",
-        "  }\n",
-        "\n",
-        "  // ここにプログラムを追記\n",
-        "  // (ここで\"試合結果の表\"の2次元配列を宣言)\n",
-        "}\n",
-        "行末に空白を含めない出力の仕方\n",
-        "以下は配列の要素を空白区切りで出力し末尾には空白を含めないようにする方法の1例です。\n",
-        "\n",
-        "Copy\n",
-        "vector<int> a = {1, 2, 3, 4, 5};\n",
-        "for (int i = 0; i < 5; i++) {\n",
-        "  cout << a.at(i);\n",
-        "  if (i == 4) {\n",
-        "    cout << endl; // 末尾なら改行\n",
-        "  }\n",
-        "  else {\n",
-        "    cout << \" \";  // それ以外なら空白\n",
-        "  }\n",
-        "}vector<int> a = {1, 2, 3, 4, 5};\n",
-        "for (int i = 0; i < 5; i++) {\n",
-        "  cout << a.at(i);\n",
-        "  if (i == 4) {\n",
-        "    cout << endl; // 末尾なら改行\n",
-        "  }\n",
-        "  else {\n",
-        "    cout << \" \";  // それ以外なら空白\n",
-        "  }\n",
-        "}\n",
-        "制約\n",
-        "1≦N≦100\n",
-        "0≦M≦4950\n",
-        "1≦A \n",
-        "i\n",
-        "​\n",
-        " ,B \n",
-        "i\n",
-        "​\n",
-        " ≦N(1≦i≦M)\n",
-        "A \n",
-        "i\n",
-        "​\n",
-        " \n",
-        "\n",
-        "=B \n",
-        "i\n",
-        "​\n",
-        " (1≦i≦M)\n",
-        "同じ参加者のペアで2回以上試合が行われることはない\n",
-        "入力はすべて整数\n",
-        "入力\n",
-        "入力は次の形式で標準入力から与えられます。\n",
-        "\n",
-        "N M\n",
-        "A \n",
-        "1\n",
-        "​\n",
-        "  B \n",
-        "1\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "2\n",
-        "​\n",
-        "  B \n",
-        "2\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "3\n",
-        "​\n",
-        "  B \n",
-        "3\n",
-        "​\n",
-        " \n",
-        ": :\n",
-        "A \n",
-        "M\n",
-        "​\n",
-        "  B \n",
-        "M\n",
-        "​\n",
-        " \n",
-        "出力\n",
-        "M試合が終了した時点での試合結果の表を出力してください。\n",
-        "\n",
-        "ただし、各行の行末に空白を含まないことに注意してください。\n",
-        "\n",
-        "ジャッジでは以下の入力例以外のケースに関してもテストされることに注意。\n",
-        "\n",
-        "入力例1 \n",
-        "Copy\n",
-        "3 2\n",
-        "1 2\n",
-        "3 1\n",
-        "出力例1 \n",
-        "Copy\n",
-        "- o x\n",
-        "x - -\n",
-        "o - -\n",
-        "1番の人と2番の人が試合を行い、1番の人が勝ったので、R \n",
-        "1,2\n",
-        "​\n",
-        "  = o、R \n",
-        "2,1\n",
-        "​\n",
-        "  = x\n",
-        "3番の人と1番の人が試合を行い、3番の人が勝ったので、R \n",
-        "1,3\n",
-        "​\n",
-        "  = x、R \n",
-        "3,1\n",
-        "​\n",
-        "  = o\n",
-        "入力例2 \n",
-        "Copy\n",
-        "7 12\n",
-        "1 5\n",
-        "5 4\n",
-        "6 2\n",
-        "1 7\n",
-        "2 4\n",
-        "6 3\n",
-        "1 3\n",
-        "6 4\n",
-        "3 7\n",
-        "5 7\n",
-        "4 3\n",
-        "6 1\n",
-        "出力例2 \n",
-        "Copy\n",
-        "- - o - o x o\n",
-        "- - - o - x -\n",
-        "x - - x - x o\n",
-        "- x o - x x -\n",
-        "x - - o - - o\n",
-        "o o o o - - -\n",
-        "x - x - x - -\n",
-        "入力例3 \n",
-        "Copy\n",
-        "1 0\n",
-        "出力例3 \n",
-        "Copy\n",
-        "-\n",
-        "ヒント\n",
-        "クリックでヒントを開く\n",
-        "テスト入出力\n",
-        "書いたプログラムがACにならず、原因がどうしてもわからないときだけ見てください。\n",
-        "\n",
-        "クリックでテスト入出力を見る\n",
-        "解答例\n",
-        "必ず自分で問題に挑戦してみてから見てください。\n",
-        "クリックで解答例を見る\n",
-        "言語\n",
-        "ソースコード\n",
-        "1\n",
-        "​\n",
-        "※ 512 KiB まで\n",
-        "※ ソースコードは「Main.拡張子」で保存されます\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "FacebookTwitterHatena共有\n",
-        "ルール 用語集\n",
-        "利用規約 プライバシーポリシー 個人情報保護方針 企業情報 よくある質問 お問い合わせ 資料請求\n",
-        "Copyright Since 2012 ©AtCoder Inc. All rights reserved.\n",
-        "\n"
+        "​"
       ],
       "metadata": {
         "id": "7lMZ3ANeGaRv"
@@ -6871,17 +6701,21 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "ABCの問題\n",
-        "ここまでの知識で解ける問題をAtCoder Beginner Contestの過去問題から紹介します。練習問題だけでは物足りない人は挑戦してみてください。\n",
-        "\n",
-        "ABC107 B - Grid Compression\n",
-        "前のページ | 次のページ\n",
-        "\n",
-        "FacebookTwitterHatena共有\n",
-        "ルール 用語集\n",
-        "利用規約 プライバシーポリシー 個人情報保護方針 企業情報 よくある質問 お問い合わせ 資料請求\n",
-        "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
+        "!g++ temp.cpp -o temp; echo ​3 2 1 2 3 1 |./temp #=> - o x x - - o - -\n",
+        "!g++ temp.cpp -o temp; echo 7 12 1 5 5 4 6 2 1 7 2 4 6 3 1 3 6 4 3 7 5 7 4 3 6 1 |./temp #=> - - o - o x o - - - o - x - x - - x - x o - x o - x x - x - - o - - o o o o o - - - x - x - x - -\n",
+        "!g++ temp.cpp -o temp; echo 1 0|./temp #=> -"
+      ],
+      "metadata": {
+        "id": "lhhvWupys6ZD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "問題\n",
+        "ABC107 B - Grid Compression"
       ],
       "metadata": {
         "id": "SU-GaBUEHjzv"
